--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
   <head>
     <title>Image Challenge</title>
-    <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>
   <body>
+
+    <!-- Having trouble importing a stylesheet, of all things! -->
+
     <style>
 
       .center {
         margin: auto;
-        width: 50%;
+        width: 80%;
         padding: 10px;
       }
 
-      .pic {
+      .thumbnail {
         max-height:125px;
+        display: inline-block;
         width: auto;
         margin:3px;
         border:1px
@@ -48,18 +51,18 @@
       /* Modal Content/Box */
       #modal-content {
         background-color: #fefefe;
-        margin: 15% auto; /* 15% from the top and centered */
+        margin: auto; /* 15% from the top and centered */
         padding: 20px;
         border: 1px solid #888;
         justify-content: center;
       }
 
+      /* The image tag that lives in the modal content box */
       #pic-frame {
         width: auto;
-        justify-content: center;
       }
 
-      /* The Close Button */
+      /* Modal Close Button */
       .close {
         color: #aaa;
         float: right;
@@ -76,11 +79,13 @@
 
     </style>
 
-      <div id="pics"></div>
+      <!-- Gallery div to populate with thumbnails-->
+
+      <div id="gallery" class="center"></div>
 
       <div class="center" id="page-buttons">
-        <button id="prev-btn" onclick="newPage(currentPage - 1)">&lt;</button>
-        <button id="next-btn" onclick="newPage(currentPage + 1)">&gt;</button>
+        <button id="prev-btn" onclick="prevPage()">&lt;</button>
+        <button id="next-btn" onclick="nextPage()">&gt;</button>
       <div>
 
       <!-- The Modal -->
@@ -104,47 +109,51 @@
         xhr.onload = function() {
           if (xhr.status === 200) {
             let returnValue = JSON.parse(xhr.responseText);
+
+            // Creates array of concatenated URLs
+
             urlArray = [];
             Array.prototype.forEach.call( returnValue.photos.photo, function( gp, i ) {
-              var farmId = gp.farm;
-              var serverId = gp.server;
-              var id = gp.id;
-              var secret = gp.secret;
+              let farmId = gp.farm;
+              let serverId = gp.server;
+              let id = gp.id;
+              let secret = gp.secret;
               urlArray.push('https://farm' + farmId + '.staticflickr.com/' + serverId + '/' + id + '_' + secret + '.jpg')
             })
-            pagePics(currentPage);
-            pagination();
+
+            // Placed these method calls here to time them after XML request
+            currentPics(currentPage);
+            pageButtons();
+
+            // End of XML request
           } else {
             console.log(this.status);
           }
         };
+
         xhr.open("GET", url);
         xhr.send();
 
-        //Array of all img URLs
+        //Currently loaded location in gallery
 
-        const allImgs = [];
         let currentPage = 0;
-        for (i = 0; i < 50; i++) {
-          allImgs.push((i + 1));
-        }
 
         //Creates divs for pics to fill
 
-        function pagePics (n) {
-          document.getElementById('pics').innerHTML = "";
+        function currentPics (n) {
+          document.getElementById('gallery').innerHTML = "";
           for (i = 0; i < 10; i++) {
             let newDiv = document.createElement("img");
-            newDiv.setAttribute("class", "pic");
+            newDiv.setAttribute("class", "thumbnail");
             newDiv.setAttribute("src", urlArray[(n * 10) + i])
             newDiv.setAttribute("onclick", "picModal(" + ((n * 10) + i) + ")")
-            document.getElementById('pics').appendChild(newDiv);
+            document.getElementById('gallery').appendChild(newDiv);
           }
         }
 
-        // Creates pagination links
+        // Creates pagination buttons
 
-        function pagination () {
+        function pageButtons () {
           for (i = 0; i < 5; i++) {
             let newBtn = document.createElement("button");
             let newContent = document.createTextNode(i + 1);
@@ -154,16 +163,31 @@
           }
         }
 
-        //Refreshes currently displayed pics
+        //Page navigation methods
 
         function newPage (n) {
           if (n >= 0 && n <= 4) {
             currentPage = n
           }
-          pagePics(currentPage);
+          currentPics(currentPage);
         }
 
-        // When the user clicks on a pic, open the modal
+        function nextPage () {
+          if (currentPage < 4) {
+            currentPage += 1
+          }
+          currentPics(currentPage);
+        }
+
+        function prevPage () {
+          if (currentPage > 0) {
+            currentPage -= 1
+          }
+          currentPics(currentPage);
+        }
+
+        // Opens modal and adds URL to img tag when the user clicks thumbnail
+
         function picModal (n) {
           let modalPic = document.getElementById("pic-frame")
           modalPic.setAttribute("src", urlArray[n])
@@ -171,13 +195,13 @@
         }
 
         // Get the modal
-        var modal = document.getElementById('myModal');
+        const modal = document.getElementById('myModal');
 
         // Get the button that opens the modal
-        var btn = document.getElementById("myBtn");
+        const btn = document.getElementById("myBtn");
 
         // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
+        const span = document.getElementsByClassName("close")[0];
 
         // When the user clicks on <span> (x), close the modal
         span.onclick = function() {
